--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -9,6 +9,7 @@
     
     <div class="tech-container">
         <div class="tech-list">
+            <!-- CI/CD Category -->
             <div class="tech-category-frame">
                 <h4 class="tech-category-title">CI/CD</h4>
                 <div class="tech-category-content">
@@ -27,6 +28,7 @@
                 </div>
             </div>
 
+            <!-- Containerization Category -->
             <div class="tech-category-frame">
                 <h4 class="tech-category-title">Containerization</h4>
                 <div class="tech-category-content">
@@ -44,7 +46,8 @@
                     </a>
                 </div>
             </div>
-
+            
+            <!-- Other categories follow the same pattern... -->
             <div class="tech-category-frame">
                 <h4 class="tech-category-title">IaC</h4>
                 <div class="tech-category-content">
